--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,95 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Welcome to Indiana Public School, where innovation meets nature in a harmonious blend for holistic education. Our purpose-built, green campus nurtures young minds, offering spacious, multimedia-equipped classrooms flooded with natural light. Embracing inquiry-based learning from Pre KG onwards, we foster deep understanding through engaging projects and real-world activities. Our virtual learning platform ensures comprehensive education from Pre KG to all Grades. At Indiana, we're not just a school; we're a family, ensuring each child feels valued and supported. Join us in shaping confident, responsible, and globally-minded individuals, where every achievement is celebrated, and every student is an esteemed INDIANIAN." />
-  <meta property="og:title" content="Welcome to Indiana Public School" />
-  <meta property="og:description" content="Welcome to Indiana Public School, where innovation meets nature in a harmonious blend for holistic education. Our purpose-built, green campus nurtures young minds, offering spacious, multimedia-equipped classrooms flooded with natural light. Embracing inquiry-based learning from Pre KG onwards, we foster deep understanding through engaging projects and real-world activities. Our virtual learning platform ensures comprehensive education from Pre KG to all Grades. At Indiana, we're not just a school; we're a family, ensuring each child feels valued and supported. Join us in shaping confident, responsible, and globally-minded individuals, where every achievement is celebrated, and every student is an esteemed INDIANIAN." />
+  <meta name="description"
+    content="Top School in Attingal and Best School in Attingal - Welcome to Indiana Public School, where innovation meets nature in a harmonious blend for holistic education. Our purpose-built, green campus nurtures young minds, offering spacious, multimedia-equipped classrooms flooded with natural light. Embracing inquiry-based learning from Pre KG onwards, we foster deep understanding through engaging projects and real-world activities. Our virtual learning platform ensures comprehensive education from Pre KG to all Grades. At Indiana, we're not just a school; we're a family, ensuring each child feels valued and supported. Join us in shaping confident, responsible, and globally-minded individuals, where every achievement is celebrated, and every student is an esteemed INDIANIAN. Best English School in Attingal." />
+  <meta property="og:title"
+    content="Welcome to Indiana Public School - Top School in Attingal and Best School in Attingal" />
+  <meta property="og:description"
+    content="Welcome to Indiana Public School, where innovation meets nature in a harmonious blend for holistic education. Our purpose-built, green campus nurtures young minds, offering spacious, multimedia-equipped classrooms flooded with natural light. Embracing inquiry-based learning from Pre KG onwards, we foster deep understanding through engaging projects and real-world activities. Our virtual learning platform ensures comprehensive education from Pre KG to all Grades. At Indiana, we're not just a school; we're a family, ensuring each child feels valued and supported. Join us in shaping confident, responsible, and globally-minded individuals, where every achievement is celebrated, and every student is an esteemed INDIANIAN. Best School in Attingal. Top School In Attingal. Best English School in Attingal." />
   <meta property="og:image" content="http://www.indianaschool.in/static/media/school-imag3.64dc1142e2177bc05823.jpeg" />
-  <meta property="og:image:width" content="1200" /> <!-- Adjust the width and height as needed -->
+  <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:url" content="http://www.indianaschool.in" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Welcome to Indiana Public School" />
-  <meta name="twitter:description" content="Welcome to Indiana Public School, where innovation meets nature in a harmonious blend for holistic education. Our purpose-built, green campus nurtures young minds, offering spacious, multimedia-equipped classrooms flooded with natural light. Embracing inquiry-based learning from Pre KG onwards, we foster deep understanding through engaging projects and real-world activities. Our virtual learning platform ensures comprehensive education from Pre KG to all Grades. At Indiana, we're not just a school; we're a family, ensuring each child feels valued and supported. Join us in shaping confident, responsible, and globally-minded individuals, where every achievement is celebrated, and every student is an esteemed INDIANIAN." />
-  <meta name="twitter:image" content="http://www.indianaschool.in/static/media/school-imag3.64dc1142e2177bc05823.jpeg" />
-  <title>Welcome to Indiana Public School</title>
+  <meta name="twitter:title"
+    content="Welcome to Indiana Public School - Top School in Attingal and Best School in Attingal" />
+  <meta name="twitter:description"
+    content="Welcome to Indiana Public School, where innovation meets nature in a harmonious blend for holistic education. Our purpose-built, green campus nurtures young minds, offering spacious, multimedia-equipped classrooms flooded with natural light. Embracing inquiry-based learning from Pre KG onwards, we foster deep understanding through engaging projects and real-world activities. Our virtual learning platform ensures comprehensive education from Pre KG to all Grades. At Indiana, we're not just a school; we're a family, ensuring each child feels valued and supported. Join us in shaping confident, responsible, and globally-minded individuals, where every achievement is celebrated, and every student is an esteemed INDIANIAN. Best School in Attingal. Top School In Attingal. Best English School in Attingal." />
+  <meta name="twitter:image"
+    content="http://www.indianaschool.in/static/media/school-imag3.64dc1142e2177bc05823.jpeg" />
+  <title>Top School in Attingal and Best School in Attingal - Welcome to Indiana Public School</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!-- Other CSS and JavaScript imports -->
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "EducationalOrganization",
+      "name": "Indiana Public School",
+      "url": "http://www.indianaschool.in",
+      "logo": "http://www.indianaschool.in/static/media/school-imag3.64dc1142e2177bc05823.jpeg",
+      "description": "Top School in Attingal and Best School in Attingal - Welcome to Indiana Public School, where innovation meets nature in a harmonious blend for holistic education. Our purpose-built, green campus nurtures young minds, offering spacious, multimedia-equipped classrooms flooded with natural light. Embracing inquiry-based learning from Pre KG onwards, we foster deep understanding through engaging projects and real-world activities. Our virtual learning platform ensures comprehensive education from Pre KG to all Grades.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Toll Junction, opposite KSEB 110KV substation, Avanavanchery",
+        "addressLocality": "Attingal",
+        "addressRegion": "KL",
+        "postalCode": "695103",
+        "addressCountry": "IN"
+      },
+      "contactPoint": [
+        {
+          "@type": "ContactPoint",
+          "telephone": "+91-9072408723",
+          "contactType": "Customer Service"
+        },
+        {
+          "@type": "ContactPoint",
+          "telephone": "+91-9744308723",
+          "contactType": "Admissions Office"
+        }
+      ],
+      "sameAs": [
+        "https://www.facebook.com/p/Indiana-Public-School-Attingal-100071582410902/",
+        "https://www.instagram.com/indianapublicschool/",
+        "https://in.linkedin.com/company/indiana-school"
+      ],
+      "openingHours": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "08:00",
+          "closes": "16:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Saturday",
+          "opens": "08:00",
+          "closes": "12:00"
+        }
+      ],
+      "foundingDate": "2021-06-01",
+      "founders": [
+        {
+          "@type": "Person",
+          "name": "N P Sudarsanan"
+        },
+        {
+          "@type": "Person",
+          "name": "Smitha Nair"
+        }
+      ]
+    }
+  </script>
+
+
 </head>
 
 <body>
